objects/Application_Log__c.object
<CustomObject>
    <description>Object to hold custom exception messages in Apex Code, Apex Batch, Apex trigger, and etc.</description>
    <fields>
        <fullName>Age__c</fullName>
        <description>Age of this record is from TODAY() - Created Date</description>
        <formula>TODAY() - DATEVALUE( CreatedDate )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Age</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Debug_Level__c</fullName>
        <description>Error, Info, Warning, Debug</description>
        <label>Debug Level</label>
        <picklist>
            <picklistValues>
                <fullName>Debug</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Error</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Info</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Warning</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Exception_Type__c</fullName>
        <label>Exception Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Integration_Payload__c</fullName>
        <description>If log is integration related show xml payload</description>
        <label>Integration Payload</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Log_Code__c</fullName>
        <description>Either the exception error code of custom org code for record</description>
        <label>Log Code</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Message__c</fullName>
        <description>Message to log</description>
        <label>Message</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Reference_Id__c</fullName>
        <description>The related record id</description>
        <label>Reference Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reference_Information__c</fullName>
        <description>The related record info (e.g. Apex Batch Job Id, Contact etc)</description>
        <label>Reference Information</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Source_Function__c</fullName>
        <description>The originating function in the class (e.g. UpdateDivision() )</description>
        <label>Source Function</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Source__c</fullName>
        <description>The originating class (e.g. CustomerManagement)</description>
        <label>Source</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Stack_Trace__c</fullName>
        <description>Raw exception stack trace for unhandled errors</description>
        <label>Stack Trace</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Timer__c</fullName>
        <description>The time in milliseconds for the transaction (e.g. For integration/batch apex messages it might be the time taken to process)</description>
        <label>Timer</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Exception Log</label>
    <listViews>
        <fullName>All</fullName>
        <columns>CREATEDBY_USER</columns>
        <columns>NAME</columns>
        <columns>CREATED_DATE</columns>
        <columns>Debug_Level__c</columns>
        <columns>Source__c</columns>
        <columns>Source_Function__c</columns>
        <columns>Message__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>User_Batch</fullName>
        <columns>NAME</columns>
        <columns>CREATED_DATE</columns>
        <columns>Debug_Level__c</columns>
        <columns>Source__c</columns>
        <columns>Message__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Source__c</field>
            <operation>equals</operation>
            <value>UserStructureUpdateUser_Batch</value>
        </filters>
        <label>User Batch</label>
        <language>en_US</language>
        <sharedTo>
            <group>SME_ITID_ITSI</group>
            <role>SME_Admin</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Year_End</fullName>
        <columns>CREATED_DATE</columns>
        <columns>NAME</columns>
        <columns>Source__c</columns>
        <columns>Message__c</columns>
        <columns>Stack_Trace__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Source__c</field>
            <operation>equals</operation>
            <value>YearEndAssignment_Batch</value>
        </filters>
        <label>Year End</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Application Log</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Exception Logs</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>